bump aws-lambda-java-runtime-interface-client to 2.5.1